fixed pagination bug and fixed overflow issues with activity cards

--- a/src/css/components/labbook/activity.scss
+++ b/src/css/components/labbook/activity.scss
@@ -425,6 +425,8 @@
 }
 
 .ActivityCard__content {
+  max-width: calc(100% - 100px);
+  width: calc(100% - 100px);
   flex: 1;
 }
 
